Fix form field spacing

--- a/src/app/manager-dashboard/reports/reports-detail.scss
+++ b/src/app/manager-dashboard/reports/reports-detail.scss
@@ -31,4 +31,12 @@
   canvas {
     max-height: 30vh;
   }
+
+  .mat-toolbar-row > * {
+    margin-right: 0.25rem;
+  }
+
+  .mat-toolbar-row > *:last-child {
+    margin-right: 0;
+  }
 }
